RESOLVED FIXED52310
[chromium] DrawingBuffer and accel canvas giving GL errors
https://bugs.webkit.org/show_bug.cgi?id=52310
Summary [chromium] DrawingBuffer and accel canvas giving GL errors
Stephen White
Reported 2011-01-12 10:48:19 PST
Running chromium/linux --enable-accelerated-2d-canvas in Debug, many GL errors are printed to stdout. glRenderbufferStorage() gives INVALID_ENUM on internalformat glFramebufferTexture2D() gives INVALID_ENUM on target glDrawArrays() gives invalid enum (probably due to the first two errors, drawing to an invalid FBO). The first two seem to be issued by DrawingBuffer. This may be related to http://code.google.com/p/chromium/issues/detail?id=65139.
Attachments
Patch (10.74 KB, patch)
2011-01-12 11:03 PST, Stephen White
no flags
Patch (10.73 KB, patch)
2011-01-12 12:27 PST, Stephen White
jamesr: review+
Stephen White
Comment 1 2011-01-12 11:03:47 PST
James Robinson
Comment 2 2011-01-12 11:06:27 PST
Comment on attachment 78709 [details] Patch R=me. Thanks!
Stephen White
Comment 3 2011-01-12 11:18:49 PST
Will wait for mac EWS results, since I made those changes blind.
WebKit Review Bot
Comment 4 2011-01-12 11:42:30 PST
James Robinson
Comment 5 2011-01-12 11:49:21 PST
Comment on attachment 78709 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=78709&action=review > Source/WebCore/platform/graphics/gpu/mac/DrawingBufferMac.mm:45 > + , m_multisampleExtensionSupported(multisampleExtensionSupported), you have a trailing comma here
Stephen White
Comment 6 2011-01-12 12:27:46 PST
Stephen White
Comment 7 2011-01-12 13:58:34 PST
Note You need to log in before you can comment on or make changes to this bug.